--- a/Leet75.csproj
+++ b/Leet75.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MedianOfTwoArraysBrute.cs" />
     <Compile Include="MedianOfTwoSortedArrays1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
